--- a/FinancasPessoais.WebApi/FinancasPessoais.WebApi.csproj
+++ b/FinancasPessoais.WebApi/FinancasPessoais.WebApi.csproj
@@ -17,4 +17,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinancasPessoais.Infrastructure.DI\FinancasPessoais.Infrastructure.DI.csproj" />
+  </ItemGroup>
+
 </Project>
