--- a/FinancasPessoais.WebApi/appsettings.json
+++ b/FinancasPessoais.WebApi/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "ServeMeConnStrDev": "Server=localhost;Database=xxxxxx;Port=5432;User Id=postgres;Password=123qwe!;"
   }
 }
