--- a/FinancasPessoais.Infrastructure.CrossCutting/FinancasPessoais.Infrastructure.CrossCutting.csproj
+++ b/FinancasPessoais.Infrastructure.CrossCutting/FinancasPessoais.Infrastructure.CrossCutting.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+    <Folder Include="Response\" />
+  </ItemGroup>
+
 </Project>
