--- a/FinancasPessoais.Main.Repositories/FinancasPessoais.Main.Repositories.csproj
+++ b/FinancasPessoais.Main.Repositories/FinancasPessoais.Main.Repositories.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="4.0.4" />
+  </ItemGroup>
+
 </Project>
