--- a/FinancasPessoais.Main.Repositories/FinancasPessoais.Main.Repositories.csproj
+++ b/FinancasPessoais.Main.Repositories/FinancasPessoais.Main.Repositories.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Npgsql" Version="4.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinancasPessoais.Infrastructure.DatabaseHelper\FinancasPessoais.Infrastructure.DatabaseHelper.csproj" />
+    <ProjectReference Include="..\FinancasPessoais.Main.Domain\FinancasPessoais.Main.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
