--- a/FinancasPessoais.Main.Services/FinancasPessoais.Main.Services.csproj
+++ b/FinancasPessoais.Main.Services/FinancasPessoais.Main.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinancasPessoais.Main.Domain\FinancasPessoais.Main.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
