--- a/FinancasPessoais.WebApi/appsettings.json
+++ b/FinancasPessoais.WebApi/appsettings.json
@@ -13,6 +13,6 @@
     }
   },
   "ConnectionStrings": {
-    "ServeMeConnStrDev": "Server=localhost;Database=xxxxxx;Port=5432;User Id=postgres;Password=123qwe!;"
+    "FinancasConnDev": "Server=localhost;Database=xxxxxx;Port=5432;User Id=postgres;Password=123qwe!;"
   }
 }
